Revert "Renamed 3rd Container "Database""
This reverts commit 94e8ed419d408f6a556886279ae3f03b8c0e7a49.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       # Add the port that the server application runs on - (port:port).
       - '8080:8080'
     depends_on:
-      - database
-  database:
+      - mongo
+  mongo:
     image: mongo
     ports:
       - '27017:27017'
