--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js",
     "dev": "nodemon sever.js"
   },
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.4.0",
-    "mongoose": "^5.12.0"
+    "mongoose": "^5.12.0",
+    "puppeteer": "^18.0.5",
+    "supertest": "^6.2.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
