--- a/client/dockerfile
+++ b/client/dockerfile
@@ -41,7 +41,7 @@
 FROM node:14-slim
 
 # signature
-MAINTAINER tjmcode <tmcguire@mcode.com>
+LABEL org.opencontainers.image.authors="tjmcode <tmcguire@mcode.com>"
 
 # set container’s working directory
 WORKDIR /app
@@ -55,7 +55,7 @@ RUN npm install
 # Copy all App source code
 COPY . .
 
-#Expose port and start the application
+# Expose port and start the application
 EXPOSE 3000
 
 CMD ["npm", "start"]
