--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -8,11 +8,15 @@ jobs:
       matrix:
         node-version: [14.0]
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - uses: actions/checkout@v3
         uses: actions/setup-node@v1
+      - name: Use Node.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
+      - name: Docker Compose Action
+        uses: isbang/compose-action@v1.2.0
+        with:
+            compose-file: "./docker/docker-compose.yml"
       - run: npm install
       - run: npm run build --if-present
       - run: npm test
