Using explicit STEPs in YML

--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -4,21 +4,33 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    # Build all three (3) Docker Containers: Client, Server, Database
     strategy:
       matrix:
         node-version: [14.0]
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2s
+      - id: Build-Step-1
+      - name: BUILD - CHECK-OUT
+      - uses: actions/checkout@v3
+      - id: Build-Step-2
+      - name: BUILD - SET-UP
+      - uses: actions/setup-node@v3
       - name: Use Node.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Docker Compose Action
+      - id: Build-Step-3
+      - name: BUILD - DOCKER COMPOSE
         uses: isbang/compose-action@v1.2.0
         with:
             compose-file: "./docker/docker-compose.yml"
+      - id: Build-Step-4
+      - name: BUILD - NPM INSTALL
       - run: npm install
+      - id: Build-Step-5
+      - name: BUILD - NPM BUILD
       - run: npm run build --if-present
+      - id: Build-Step-6
+      - name: BUILD - NPM TEST
       - run: npm test
         env:
           CI: true
@@ -27,7 +39,11 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
+      - id: Deploy-Step-1
+      - name: DEPLOY - CHECK-OUT
       - uses: actions/checkout@master
+      - id: Deploy-Step-2
+      - name: DEPLOY - SYNC-SERVER
       - uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
