--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -13,9 +13,8 @@ jobs:
       - name: BUILD - CHECK-OUT
       - uses: actions/checkout@v3
       - id: Build-Step-2
-      - name: BUILD - SET-UP
+      - name: BUILD - SET-UP NODE ${{ matrix.node-version }}
       - uses: actions/setup-node@v3
-      - name: Use Node.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
       - id: Build-Step-3
