--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -10,27 +10,27 @@ jobs:
         node-version: [14.0]
     steps:
       - id: Build-Step-1
-      - name: BUILD - CHECK-OUT
-      - uses: actions/checkout@v3
+        name: BUILD - CHECK-OUT
+        uses: actions/checkout@v3
       - id: Build-Step-2
-      - name: BUILD - SET-UP NODE ${{ matrix.node-version }}
-      - uses: actions/setup-node@v3
+        name: BUILD - SET-UP NODE ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       - id: Build-Step-3
-      - name: BUILD - DOCKER COMPOSE
+        name: BUILD - DOCKER COMPOSE
         uses: isbang/compose-action@v1.2.0
         with:
             compose-file: "./docker/docker-compose.yml"
       - id: Build-Step-4
-      - name: BUILD - NPM INSTALL
-      - run: npm install
+        name: BUILD - NPM INSTALL
+        run: npm install
       - id: Build-Step-5
-      - name: BUILD - NPM BUILD
-      - run: npm run build --if-present
+        name: BUILD - NPM BUILD
+        run: npm run build --if-present
       - id: Build-Step-6
-      - name: BUILD - NPM TEST
-      - run: npm test
+        name: BUILD - NPM TEST
+        run: npm test
         env:
           CI: true
           COMPOSE_PROJECT_NAME: appname
@@ -39,11 +39,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: Deploy-Step-1
-      - name: DEPLOY - CHECK-OUT
-      - uses: actions/checkout@master
+        name: DEPLOY - CHECK-OUT
+        uses: actions/checkout@master
       - id: Deploy-Step-2
-      - name: DEPLOY - SYNC-SERVER
-      - uses: jakejarvis/s3-sync-action@master
+        name: DEPLOY - SYNC-SERVER
+        uses: jakejarvis/s3-sync-action@master
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
