--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -1,10 +1,14 @@
 name: CI/CD for AppName
 on:
   push:
+    branches:
+      - master
+
 jobs:
+
   # B U I L D
   build:
-    runs-on: linux-latest
+    runs-on: ubuntu-latest
     # Build all three (3) Docker Containers: Client, Server, Database
     strategy:
       matrix:
@@ -27,45 +31,15 @@ jobs:
         env:
           CI: true
           COMPOSE_PROJECT_NAME: appname
+
   # D E P L O Y
   deploy:
+    name: Deploy Containers to Amazon EC2
     needs: build
-    runs-on: linux-latest
-    steps:
-      - id: Deploy-Step-1
-        name: DEPLOY - CHECK-OUT CODE
-        uses: actions/checkout@master
-      - id: Deploy-Step-2
-        name: DEPLOY - DOCKER LOGIN
-        env:
-          COMPOSE_PROJECT_NAME: appname
-          DOCKER_USER: ${{secrets.DOCKER_USER}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        # D A T A B A S E
-      - id: Deploy-Step-3
-        name: DEPLOY - DOCKER PUSH DATABASE
-        env:
-          REPO: mit-xpro-appname-database
-        run: |
-          docker build -t $REPO .
-          docker tag $REPO:latest ${{secrets.DOCKER_USER}}/$REPO:latest
-          docker push ${{secrets.DOCKER_USER}}/$REPO
-        # S E R V E R
-      - id: Deploy-Step-4
-        name: DEPLOY - DOCKER PUSH SERVER
-        env:
-          REPO: mit-xpro-appname-server
-        run: |
-          docker build -t $REPO .
-          docker tag $REPO:latest ${{secrets.DOCKER_USER}}/$REPO:latest
-          docker push ${{secrets.DOCKER_USER}}/$REPO
-        # C L I E N T
-      - id: Deploy-Step-5
-        name: DEPLOY - DOCKER PUSH CLIENT
-        env:
-          REPO: mit-xpro-appname-client
-        run: |
-          docker build -t $REPO .
-          docker tag $REPO:latest ${{secrets.DOCKER_USER}}/$REPO:latest
-          docker push ${{secrets.DOCKER_USER}}/$REPO
+    runs-on: ubuntu-latest
+    uses: easingthemes/ssh-deploy@main
+    env:
+      SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+      REMOTE_HOST: ${{ secrets.HOST_DNS }}
+      REMOTE_USER: ${{ secrets.USERNAME }}
+      TARGET: ${{ secrets.TARGET_DIR }}
