--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -2,10 +2,8 @@ name: CI/CD for AppName
 on:
   push:
     branches:
-      - master
-
+      - main
 jobs:
-
   # B U I L D
   build:
     runs-on: ubuntu-latest
@@ -31,7 +29,6 @@ jobs:
         env:
           CI: true
           COMPOSE_PROJECT_NAME: appname
-
   # D E P L O Y
   deploy:
     name: Deploy Containers to Amazon EC2
