--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -34,9 +34,16 @@ jobs:
     name: Deploy Containers to Amazon EC2
     needs: build
     runs-on: ubuntu-latest
-    uses: easingthemes/ssh-deploy@main
-    env:
-      SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-      REMOTE_HOST: ${{ secrets.HOST_DNS }}
-      REMOTE_USER: ${{ secrets.USERNAME }}
-      TARGET: ${{ secrets.TARGET_DIR }}
+    uses: wshihadeh/docker-deployment-action@v1
+    with:
+      remote_docker_host: ec2-user@ec2-3-21-204-216.us-east-2.compute.amazonaws.com
+      ssh_private_key: ${{ secrets.DOCKER_SSH_PRIVATE_KEY }}
+      ssh_public_key: ${{ secrets.DOCKER_SSH_PUBLIC_KEY }}
+      deployment_mode: docker-compose
+      copy_stack_file: true
+      deploy_path: /root/appname
+      stack_file_name: docker-compose.yml
+      keep_files: 5
+      args: up -d
+      docker_prune: 'false'
+      pull_images_first: 'false'
