Remade SSH Keys

--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     # B U I L D
-    name: BUILD  - PREPARATION
+    name: BUILD
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -30,7 +30,7 @@ jobs:
           COMPOSE_PROJECT_NAME: appname
   deploy:
     # D E P L O Y
-    name: DEPLOY  - PREPARATION
+    name: DEPLOY
     needs: build
     runs-on: ubuntu-latest
     steps:
