--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -39,25 +39,17 @@ jobs:
         uses: actions/checkout@v2
       - id: Deploy-Step-2
         name: DEPLOY - LOG-IN DOCKER HUB
-        run: echo ${{ secrets.DOCKERHUB_TOKEN }} |  docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p  ${{ secrets.DOCKERHUB_PASSWORD }}
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - id: Deploy-Step-3
         name: DEPLOY - GET DOCKER VERSION
         run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
       - id: Deploy-Step-4
-        name: DEPLOY - BUILD DATABASE DOCKER IMAGE
-        run: docker build -t tjmcode/mitxpro-appname-database .
-      - id: Deploy-Step-5
-        name: DEPLOY - PUSH DATABASE DOCKER IMAGE
-        run: docker push tjmcode/mitxpro-appname-database
-      - id: Deploy-Step-6
-        name: DEPLOY - BUILD SERVER DOCKER IMAGE
-        run: docker build -t tjmcode/mitxpro-appname-server .
-      - id: Deploy-Step-7
-        name: DEPLOY - PUSH SERVER DOCKER IMAGE
-        run: docker push tjmcode/mitxpro-appname-server
-      - id: Deploy-Step-8
-        name: DEPLOY - BUILD CLIENT DOCKER IMAGE
-        run: docker build -t tjmcode/mitxpro-appname-client .
-      - id: Deploy-Step-9
-        name: DEPLOY - PUSH CLIENT DOCKER IMAGE
-        run: docker push tjmcode/mitxpro-appname-client
+        name: BUILD + PUSH
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: tjmcode/mit-xpro-appname:latest
