--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   build:
-    # B U I L D
+    # B U I L D   &   D E P L O Y
     name: BUILD
     runs-on: ubuntu-latest
     strategy:
@@ -21,34 +21,30 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       -
-        name: BUILD - DOCKER COMPOSE
-        uses: isbang/compose-action@v1.2.0
-        with:
-            compose-file: "docker-compose.yml"
-        env:
-          CI: true
-          COMPOSE_PROJECT_NAME: mit-xpro-appname
-  deploy:
-    # D E P L O Y
-    name: DEPLOY
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
+        name: BUILD - SET-UP DOCKER BUILDX
+        id: buildx
+        uses: docker/setup-buildx-action@v2
+
       -
-        name: DEPLOY - CHECK-OUT CODE
-        uses: actions/checkout@v3
-      -
-        name: DEPLOY - LOG-IN DOCKER HUB
+        name: BUILD - LOG INTO DOCKER HUB
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_PERSONAL_TOKEN }}
+
       -
-        name: DEPLOY - GET DOCKER VERSION
-        run: echo ::set-output name=tag::$(echo ${GITHUB_REF:10})
+        name: BUILD - BUILD AND PUSH TO DOCKER HUB
+        uses: docker/build-push-action@v2
+        with:
+          # relative path to the place where source code with Dockerfile is located
+          context: ./server
+          # Note: tags has to be all lower-case
+          tags: |
+            tjmcode/mit-xpro-appname-server:latest
+            tjmcode/mit-xpro-appname-client:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+
       -
-        name: BUILD + PUSH
-        run: |
-          docker push appname-database/mongo
-          docker push appname-server/server
-          docker push appname-client/client
+        name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
