Using a single Context "."

--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -36,13 +36,11 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
-          context: ./server
+          context: .
           # Note: tags has to be all lower-case
-          tags: tjmcode/mit-xpro-appname-server:latest
-          # relative path to the place where source code with Dockerfile is located
-          context: ./client
-          # Note: tags has to be all lower-case
-          tags: tjmcode/mit-xpro-appname-client:latest
+          tags: |
+            tjmcode/mit-xpro-appname-server:latest
+            tjmcode/mit-xpro-appname-client:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
 
