--- a/.github/workflows/appname-actions.yml
+++ b/.github/workflows/appname-actions.yml
@@ -4,35 +4,35 @@ on:
     branches:
       - main
 jobs:
-  build:
-    # B U I L D   &   D E P L O Y
-    name: BUILD
+  ci-cd:
+    #  B U I L D   &   P U S H
+    name: CI-CD
     runs-on: ubuntu-latest
     strategy:
       matrix:
         node-version: [14]
     steps:
       -
-        name: BUILD - CHECK-OUT CODE TO VM
+        name: CI-CD - CHECK-OUT CODE TO VM
         uses: actions/checkout@v3
       -
-        name: BUILD - SET-UP NODE ${{ matrix.node-version }}
+        name: CI-CD - SET-UP NODE ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
       -
-        name: BUILD - SET-UP DOCKER BUILDX
+        name: CI-CD - SET-UP DOCKER BUILDX
         uses: docker/setup-buildx-action@v2
 
       -
-        name: BUILD - LOG INTO DOCKER HUB
+        name: CI-CD - LOG INTO DOCKER HUB
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PERSONAL_TOKEN }}
 
       -
-        name: BUILD - SERVER FOR DOCKER HUB
+        name: CI-CD - BUILD & PUSH SERVER TO DOCKER HUB
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
@@ -42,7 +42,7 @@ jobs:
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
       -
-        name: BUILD - CLIENT FOR DOCKER HUB
+        name: CI-CD - BUILD & PUSH CLIENT TO DOCKER HUB
         uses: docker/build-push-action@v2
         with:
           # relative path to the place where source code with Dockerfile is located
@@ -51,7 +51,3 @@ jobs:
           tags: tjmcode/mit-xpro-appname-client:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
-
-      -
-        name: BUILD - IMAGE DIGEST
-        run: echo ${{ steps.docker_build.outputs.digest }}
