--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for AppName
+name: CI/CD Pipeline for ${APP_NAME}
 on:
   push:
     branches:
@@ -39,7 +39,7 @@ jobs:
           context: ./database
           file: ./database/dockerfile
           # Note: tags has to be all lower-case
-          tags: tjmcode/mit-xpro-appname-database:latest
+          tags: tjmcode/${APP_NAME}-database:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
       -
@@ -50,7 +50,7 @@ jobs:
           context: ./server
           file: ./server/dockerfile
           # Note: tags has to be all lower-case
-          tags: tjmcode/mit-xpro-appname-server:latest
+          tags: tjmcode/${APP_NAME}-server:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
       -
@@ -61,6 +61,6 @@ jobs:
           context: ./client
           file: ./client/dockerfile
           # Note: tags has to be all lower-case
-          tags: tjmcode/mit-xpro-appname-client:latest
+          tags: tjmcode/${APP_NAME}-client:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
