--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
+  "name": "mcode-backend",
+  "version": "0.0.0",
+  "description": "MicroCODE's generic MERN Backend.",
   "main": "server.js",
   "scripts": {
     "test": "jest",
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.17.1",
     "faker": "^5.4.0",
     "mongoose": "^5.12.0",
