--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,136 @@
+#      Title:    MicroCODE Docker Compose File for MERN App STACK
+#      Module:   Modules (./docker-compose.yml)
+#      Customer: MITxPRO MERN Course
+#      Creator:  MicroCODE Incorporated
+#      Date:     September 2022
+#      Author:   Timothy J McGuire
+#
+#      Designed and Coded: 2022 MicroCODE Incorporated
+#
+#      This software and related materials are the property of
+#      MicroCODE Incorporated and contain confidential and proprietary
+#      information. This software and related materials shall not be
+#      duplicated, disclosed to others, or used in any way without the
+#      written of MicroCODE Incorported.
+#
+#
+#      DESCRIPTION:
+#      ------------
+#
+#      This module builds all (3) Containers of the Dockerization of a MERN App.
+#
+#      o  Frontend = Client = ReactJS / NextJS, NodeJS, Apollo Client, etc.
+#      o  Backend = Server = ExpressJS, NodeJS, Apollo API, GraphQL, etc.
+#      o  Database = MondoDB = Persistent App Data Store.
+#
+#
+#      NOTES:
+#      ------
+#
+#      o  Code like a Machine™. Consistently and Explictly, Simply and for Readability. Hail CAESAR™.
+#
+#      o  While I could just call for a standard 'mongo' image from 'backend' I chose to
+#         create a seperate folder and 'dockerfile' to do so, so I could build the (3) containers
+#         in a consistent manner. (The lack of a 'database' folder and dockfile threw me when
+#         I first looked at 3-Tier App examples, i.e.: Where is the dockfile for the 3rd Tier?).
+#         So I figured out how to invoke it just like 'frontend/client' and 'backend/server'. Hail CAESAR.
+#
+#
+#
+#      REFERENCES:
+#      -----------
+#
+#      1. DOCKER Documentation
+#         https://docs.docker.com/docker-hub/
+#
+#      2. CI/CD Hands-On : Github Actions+Docker Hub+AWS EC2
+#         https://medium.com/ryanjang-devnotes/ci-cd-hands-on-github-actions-docker-hub-aws-ec2-ba09f80297e1
+#
+#      3. Demo Repository of MERN + DOCKER (Development + Production Guidance)
+#         https://github.com/joshdcuneo/mern-docker-starter
+#
+#      4. How To Provision and Manage Remote Docker Hosts with Docker Machine on Ubuntu 16.04
+#         https://www.digitalocean.com/community/tutorials/how-to-provision-and-manage-remote-docker-hosts-with-docker-machine-on-ubuntu-16-04
+#
+#      5. Automatically build & push a Full Stack Application onto Docker Hub using GitHub Actions
+#         https://towardsdev.com/automatically-build-push-a-full-stack-application-onto-docker-hub-using-github-actions-fb274980202d
+#
+#      6. How to Use MERN Stack: A Complete Guide
+#         https://www.mongodb.com/languages/mern-stack-tutorial
+#
+#
+#
+#
+#      MODIFICATIONS:
+#      --------------
+#
+#  Date:         By-Group:   Rev:     Description:
+#
+#  27-Sep-2022   TJM-MCODE  {0001}    New file for my '${APP_NAME}' 3-Tier Dockerized Template solution.
+#                                     Define all the APP_* environment variables in your .env file.
+#
+#
 version: '3'
 services:
-  client:
-    container_name: appname-client
-    # client, frontend, app ui
+  #
+  #  F R O N T E N D
+  #  ---------------
+  frontend:
+    # frontend, client, app ui
+    container_name: ${APP_NAME}-frontend
+    # use the shared .env file for all 3 Tiers
+    env_file:
+      - .\.env
     build:
-      context: client # build from \client
+      context: frontend # build from \frontend
+      args:
+        APP_NAME: ${APP_NAME}
     ports:
-      - '3000:3000'
+      - '${APP_FRONTEND_PORT}:${APP_FRONTEND_PORT}'
     restart: always
     networks:
-      - react-express # client to server connection
+      - react-express # frontend to backend connection
     depends_on:
-      - server
-  server:
-    container_name: appname-server
-    # server, backend, app internals
+      - backend
+  #
+  #  B A C K E N D
+  #  -------------
+  backend:
+    # backend, server, app internals
+    container_name: ${APP_NAME}-backend
+    # use the shared .env file for all 3 Tiers
+    env_file:
+      - .\.env
     build:
-      context: server # build from \server
+      context: backend # build from \backend
+      args:
+        APP_NAME: ${APP_NAME}
     ports:
-      - '8080:8080'
+      - '${APP_BACKEND_PORT}:${APP_BACKEND_PORT}'
     restart: always
     networks:
-      - react-express # client to server connection
-      - express-mongo # server to database connection
+      - react-express # frontend to backend connection
+      - express-mongo # backend to database connection
     depends_on:
       - database
+  #
+  #  D A T A B A S E
+  #  ---------------
   database:
-    container_name: appname-database
     # database, db, data store, app persistent data
+    container_name: ${APP_NAME}-database
+    # use the shared .env file for all 3 Tiers
+    env_file:
+      - .\.env
     build:
       context: database # build from \database
+      args:
+        APP_NAME: ${APP_NAME}
     ports:
-      - '27017:27017'
+      - '${APP_DATABASE_PORT}:${APP_DATABASE_PORT}'
     restart: always
     networks:
-      - express-mongo # server to database connection
+      - express-mongo # backend to database connection
 networks:
   react-express:
   express-mongo:
