--- a/.github/workflows/CI-CD-Action.yml
+++ b/.github/workflows/CI-CD-Action.yml
@@ -17,8 +17,22 @@
 #      DESCRIPTION:
 #      ------------
 #
-#      This module implements the GitHUb Actions of a MERN 3-Tier App.
+#      This module implements the GitHub CI/CD Pipeline Action of a MERN 3-Tier App.
+#      This module builds all (3) Containers of the Dockerized MERN App.
 #
+#      o  Frontend = Client = ReactJS / NextJS, NodeJS, Apollo Client, etc.
+#      o  Backend = Server = ExpressJS, NodeJS, Apollo API, GraphQL, etc.
+#      o  Database = MondoDB = Persistent App Data Store.
+#
+#
+#      NOTES:
+#      ------
+#
+#      o  Code like a Machine™. Consistently and Explictly, Simply and for Readability. Hail CAESAR™.
+#
+#      o  This script is almost a dark-mirror image of our standard 'docker-compose.yml' file.
+#         I tried to keep all naming and ordering of 'frontend/client' and 'backend/server' the same. Hail CAESAR.
+
 #
 #      REFERENCES:
 #      -----------
@@ -66,44 +80,50 @@ jobs:
       -
         name: CI-CD - SET-UP DOCKER BUILDX
         uses: docker/setup-buildx-action@v2
-
       -
         name: CI-CD - LOG INTO DOCKER HUB
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PERSONAL_TOKEN }}
-
       -
-        name: CI-CD - BUILD & PUSH DATABASE TO DOCKER HUB
+        name: CI-CD - BUILD & PUSH FRONTEND/CLIENT/UI TO DOCKER HUB
         uses: docker/build-push-action@v2
         with:
+          #  F R O N T E N D
+          #  ---------------
+          # relative path to the place where source code with Dockerfile is located
+          context: ./frontend
+          file: ./frontend/dockerfile
+          # Note: tags has to be all lower-case
+          tags: tjmcode/${{ env.APP_NAME }}-frontend:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+          #
+      -
+        name: CI-CD - BUILD & PUSH BACKEND/SERVER TO DOCKER HUB
+        uses: docker/build-push-action@v2
+        with:
+          #  B A C K E N D
+          #  -------------
+          # relative path to the place where source code with Dockerfile is located
+          context: ./backend
+          file: ./backend/dockerfile
+          # Note: tags has to be all lower-case
+          tags: tjmcode/${{ env.APP_NAME }}-backend:latest
+          # build on feature branches, push only on main branch
+          push: ${{ github.ref == 'refs/heads/main' }}
+          #
+      -
+        name: CI-CD - BUILD & PUSH DATABASE/DB TO DOCKER HUB
+        uses: docker/build-push-action@v2
+        with:
+          #  D A T A B A S E
+          #  ---------------
           # relative path to the place where source code with Dockerfile is located
           context: ./database
           file: ./database/dockerfile
           # Note: tags has to be all lower-case
           tags: tjmcode/${{ env.APP_NAME }}-database:latest
-          # build on feature branches, push only on main branch
-          push: ${{ github.ref == 'refs/heads/main' }}
-      -
-        name: CI-CD - BUILD & PUSH SERVER TO DOCKER HUB
-        uses: docker/build-push-action@v2
-        with:
-          # relative path to the place where source code with Dockerfile is located
-          context: ./server
-          file: ./server/dockerfile
-          # Note: tags has to be all lower-case
-          tags: tjmcode/${{ env.APP_NAME }}-server:latest
-          # build on feature branches, push only on main branch
-          push: ${{ github.ref == 'refs/heads/main' }}
-      -
-        name: CI-CD - BUILD & PUSH CLIENT TO DOCKER HUB
-        uses: docker/build-push-action@v2
-        with:
-          # relative path to the place where source code with Dockerfile is located
-          context: ./client
-          file: ./client/dockerfile
-          # Note: tags has to be all lower-case
-          tags: tjmcode/${{ env.APP_NAME }}-client:latest
           # build on feature branches, push only on main branch
           push: ${{ github.ref == 'refs/heads/main' }}
